--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p> TTTT This site was created by Andrew Mead.It Use Data from mapbox.com and darksky.net!</p>
         <img class="portrait" src="/img/me.png">
     </div>
     
